--- a/src/content/learn/ai-model-failover-strategies.mdx
+++ b/src/content/learn/ai-model-failover-strategies.mdx
@@ -8,7 +8,7 @@ category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimizat
 
 import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
 
-# AI Model Failover Strategies
+## AI Model Failover Strategies
 
 AI models can fail for many reasons: provider outages, API errors, rate limits, or unexpected bugs. To ensure reliability and uptime, robust failover strategies are essential.
 
@@ -69,7 +69,7 @@ def check_provider_health(url):
     except Exception:
         return False
 
-# Example: check OpenAI and Anthropic
+## Example: check OpenAI and Anthropic
 providers = {
     'openai': 'https://api.openai.com/v1/models',
     'anthropic': 'https://api.anthropic.com/v1/models',
