--- a/src/content/learn/api-gateway-ai-models.mdx
+++ b/src/content/learn/api-gateway-ai-models.mdx
@@ -8,7 +8,7 @@ category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techn
 
 import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
 
-# API Gateway for AI Models
+<!-- Removed duplicate H1: API Gateway for AI Models -->
 
 An API gateway serves as a centralized entry point for all AI model requests, providing essential services like authentication, rate limiting, request transformation, monitoring, and routing. This architecture pattern is crucial for managing multiple AI providers, ensuring security, and optimizing performance.
 
@@ -638,37 +638,32 @@ async def run_gateway():
         log_level="info"
     )
 
-# Configuration example
-GATEWAY_CONFIG = {
-    'providers': {
-        'openai': {
-            'api_key': '${OPENAI_API_KEY}',
-            'base_url': 'https://api.openai.com/v1',
-            'timeout': 30
-        },
-        'anthropic': {
-            'api_key': '${ANTHROPIC_API_KEY}',
-            'base_url': 'https://api.anthropic.com',
-            'timeout': 30
-        }
-    },
-    'rate_limiting': {
-        'free_tier': {'requests_per_minute': 10, 'requests_per_hour': 100},
-        'pro_tier': {'requests_per_minute': 300, 'requests_per_hour': 10000}
-    },
-    'caching': {
-        'enabled': True,
-        'ttl': 3600,
-        'redis_url': '${REDIS_URL}'
-    },
-    'security': {
-        'jwt_secret': '${JWT_SECRET_KEY}',
-        'require_authentication': True
-    }
-}
+## Configuration example
 
-if __name__ == "__main__":
-    asyncio.run(run_gateway())
+```yaml
+# security_config.yaml
+security:
+  authentication:
+    type: "jwt"
+    secret_key: "${JWT_SECRET_KEY}"
+    token_expiry: 3600
+  
+  authorization:
+    enabled: true
+    permission_model: "rbac"
+    default_permissions: ["read"]
+  
+  rate_limiting:
+    enabled: true
+    default_limit: 100
+    burst_limit: 200
+    window_size: 60
+  
+  cors:
+    enabled: true
+    allowed_origins: ["https://yourdomain.com"]
+    allowed_methods: ["GET", "POST"]
+    allowed_headers: ["*"]
 ```
 
 ## Monitoring and Analytics
@@ -727,7 +722,7 @@ class GatewayMonitor:
 ### 1. Security Configuration
 
 ```yaml
-# security_config.yaml
+## security_config.yaml
 security:
   authentication:
     type: "jwt"
