--- a/src/content/learn/automatic-fallback-for-ai-models.mdx
+++ b/src/content/learn/automatic-fallback-for-ai-models.mdx
@@ -8,7 +8,7 @@ category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimizat
 
 import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
 
-# Automatic Fallback for AI Models
+<!-- Removed duplicate H1: Automatic Fallback for AI Models -->
 
 AI models and APIs can fail unexpectedly. Automatic fallback ensures your application continues to work by switching to a backup model or provider.
 
