--- a/src/content/learn/getting-started.mdx
+++ b/src/content/learn/getting-started.mdx
@@ -6,7 +6,7 @@ readingTime: "8 minutes"
 category: "Beginner's Guide"
 ---
 
-# Getting Started with AI Resource Optimization
+<!-- Removed duplicate H1: Getting Started with AI Resource Optimization -->
 
 AI resource optimization is the process of maximizing the efficiency of your AI models while minimizing costs. Whether you're just starting with AI or looking to optimize existing deployments, this guide will walk you through the fundamentals.
 
@@ -70,19 +70,19 @@ Model optimization is often the most impactful area for resource efficiency:
 import torch
 import torch.quantization as quantization
 
-# Load your model
+## Load your model
 model = YourModel()
 model.eval()
 
-# Prepare for quantization
+## Prepare for quantization
 model_prepared = quantization.prepare(model)
 
-# Calibrate with sample data
+## Calibrate with sample data
 with torch.no_grad():
     for data in calibration_data:
         model_prepared(data)
 
-# Convert to quantized model
+## Convert to quantized model
 quantized_model = quantization.convert(model_prepared)
 ```
 
