Add ServiceCard component for AI model management and update references in related documentation

--- a/src/content/learn/ai-model-error-handling-techniques.mdx
+++ b/src/content/learn/ai-model-error-handling-techniques.mdx
@@ -6,11 +6,11 @@ readingTime: "11 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
-import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+import ServiceCard from '../../components/ServiceCard.astro';
 
 Effective error handling is crucial for building reliable AI applications. This guide covers comprehensive error handling strategies, retry mechanisms, graceful degradation, and implementation patterns.
 
-<TetrateServiceCard 
+<ServiceCard 
   title="Managed Error Handling"
   description="provides advanced error handling capabilities with automatic retry mechanisms, circuit breakers, and graceful degradation. This managed service handles the complexity of error management, ensuring your AI applications remain resilient even when individual components fail."
   features={[
