--- a/src/content/learn/ai-model-error-recovery.mdx
+++ b/src/content/learn/ai-model-error-recovery.mdx
@@ -6,11 +6,11 @@ readingTime: "11 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
-import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+import ServiceCard from '../../components/ServiceCard.astro';
 
 Effective error recovery is crucial for maintaining reliable AI services. This guide covers comprehensive error handling strategies, recovery mechanisms, and best practices for managing AI model errors and failures.
 
-<TetrateServiceCard 
+<ServiceCard 
   title="Managed Error Recovery"
   description="provides comprehensive error recovery capabilities with intelligent error classification, automatic recovery mechanisms, and advanced monitoring. This managed service handles the complexity of error recovery, ensuring your AI systems automatically recover from failures and maintain high availability."
   features={[
