--- a/src/content/learn/ai-model-failover-strategies.mdx
+++ b/src/content/learn/ai-model-failover-strategies.mdx
@@ -6,13 +6,13 @@ readingTime: "10 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
-import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+import ServiceCard from '../../components/ServiceCard.astro';
 
 ## AI Model Failover Strategies
 
 AI models can fail for many reasons: provider outages, API errors, rate limits, or unexpected bugs. To ensure reliability and uptime, robust failover strategies are essential.
 
-<TetrateServiceCard 
+<ServiceCard 
   title="Managed Failover Solution"
   description="provides comprehensive failover strategies with multi-provider redundancy, health monitoring, circuit breakers, and automatic recovery. This managed service handles the complexity of failover logic, ensuring your AI applications maintain high availability even during provider outages."
   features={[
