--- a/src/content/learn/ai-model-operations-guide.mdx
+++ b/src/content/learn/ai-model-operations-guide.mdx
@@ -6,11 +6,11 @@ readingTime: "13 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
-import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+import ServiceCard from '../../components/ServiceCard.astro';
 
 Effective AI model operations are essential for maintaining reliable, scalable, and cost-efficient AI services in production. This comprehensive guide covers operational procedures, monitoring strategies, maintenance practices, and best practices for managing AI model operations.
 
-<TetrateServiceCard 
+<ServiceCard 
   title="Managed Operations Solution"
   description="provides comprehensive AI model operations capabilities with automated deployment, monitoring, and maintenance. This managed service handles the complexity of AI operations, allowing you to focus on building great applications while ensuring reliable, scalable AI services."
   features={[
