--- a/src/content/learn/ai-model-performance-troubleshooting.mdx
+++ b/src/content/learn/ai-model-performance-troubleshooting.mdx
@@ -6,11 +6,11 @@ readingTime: "12 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
-import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+import ServiceCard from '../../components/ServiceCard.astro';
 
 Effective troubleshooting is essential for maintaining optimal AI model performance. This guide provides systematic approaches, diagnostic tools, and optimization techniques for identifying and resolving AI performance issues.
 
-<TetrateServiceCard 
+<ServiceCard 
   title="Managed Performance Solution"
   description="provides comprehensive performance monitoring and troubleshooting capabilities with real-time metrics, automated diagnostics, and optimization recommendations. This managed service helps identify and resolve performance issues before they impact your users."
   features={[
