--- a/src/content/learn/ai-model-reliability-best-practices.mdx
+++ b/src/content/learn/ai-model-reliability-best-practices.mdx
@@ -6,11 +6,11 @@ readingTime: "9 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimization", "Resiliency"]
 ---
 
-import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+import ServiceCard from '../../components/ServiceCard.astro';
 
 Ensuring AI model reliability is critical for production systems. Here are proven best practices to maximize uptime and minimize failures.
 
-<TetrateServiceCard 
+<ServiceCard 
   title="Managed Reliability Solution"
   description="provides comprehensive reliability features with built-in monitoring, redundancy, error handling, and governance controls. This managed service implements industry best practices for AI model reliability, ensuring your systems maintain high availability and performance."
   features={[
