--- a/src/content/learn/ai-model-routing-load-balancing.mdx
+++ b/src/content/learn/ai-model-routing-load-balancing.mdx
@@ -6,11 +6,11 @@ readingTime: "14 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
-import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+import ServiceCard from '../../components/ServiceCard.astro';
 
 As AI applications scale, managing traffic across multiple models and providers becomes critical. Intelligent routing and load balancing ensure optimal performance, cost efficiency, and reliability by distributing requests based on various factors like cost, performance, availability, and business requirements.
 
-<TetrateServiceCard 
+<ServiceCard 
   title="Managed Routing Solution"
   description="offers intelligent routing for GenAI developers with advanced load balancing, automatic failover, and cross-provider monitoring. This managed service handles the complexity of routing decisions, health checking, and traffic distribution across multiple AI providers."
   features={[
