--- a/src/content/learn/api-gateway-ai-models.mdx
+++ b/src/content/learn/api-gateway-ai-models.mdx
@@ -6,11 +6,11 @@ readingTime: "13 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
-import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+import ServiceCard from '../../components/ServiceCard.astro';
 
 An API gateway serves as a centralized entry point for all AI model requests, providing essential services like authentication, rate limiting, request transformation, monitoring, and routing. This architecture pattern is crucial for managing multiple AI providers, ensuring security, and optimizing performance.
 
-<TetrateServiceCard 
+<ServiceCard 
   title="Managed Gateway Solution"
   description="provides a fully managed API gateway for AI models with built-in authentication, rate limiting, request transformation, and intelligent routing. This service eliminates the need to build and maintain your own gateway infrastructure while providing enterprise-grade reliability and monitoring."
   features={[
