--- a/src/content/learn/monitoring-ai-model-health.mdx
+++ b/src/content/learn/monitoring-ai-model-health.mdx
@@ -6,11 +6,11 @@ readingTime: "12 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimization", "Resiliency"]
 ---
 
-import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+import ServiceCard from '../../components/ServiceCard.astro';
 
 Comprehensive health monitoring is essential for maintaining reliable AI model deployments. This guide covers monitoring strategies, key metrics, alerting systems, and implementation patterns.
 
-<TetrateServiceCard 
+<ServiceCard 
   title="Managed Monitoring Solution"
   description="provides comprehensive AI model health monitoring with real-time metrics, alerting, and cross-provider visibility. This managed service offers built-in monitoring dashboards, automated health checks, and intelligent alerting to ensure your AI systems remain healthy and performant."
   features={[
