--- a/src/content/learn/unified-ai-model-management.mdx
+++ b/src/content/learn/unified-ai-model-management.mdx
@@ -6,11 +6,11 @@ readingTime: "12 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimization"]
 ---
 
-import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+import ServiceCard from '../../components/ServiceCard.astro';
 
 Managing connectivity to multiple AI models from different providers can be complex and error-prone. A unified AI model management system provides a centralized approach to handle multiple providers, abstract away differences, and provide a consistent interface for your applications.
 
-<TetrateServiceCard 
+<ServiceCard 
   title="Managed Unified Management"
   description="provides intelligent routing for GenAI developers with unified model access, automatic fallback, cost management, and cross-provider monitoring. This managed service can significantly reduce the complexity of building and maintaining your own unified AI management system."
   features={[
