--- a/src/content/learn/ai-model-maintenance-procedures.mdx
+++ b/src/content/learn/ai-model-maintenance-procedures.mdx
@@ -6,11 +6,11 @@ readingTime: "12 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
-import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+import ServiceCard from '../../components/ServiceCard.astro';
 
 Effective maintenance is crucial for keeping AI models performing optimally in production. This guide covers systematic maintenance procedures, update strategies, and best practices for maintaining AI models throughout their lifecycle.
 
-<TetrateServiceCard 
+<ServiceCard 
   title="Managed Maintenance Solution"
   description="provides comprehensive AI model maintenance capabilities with automated health checks, performance monitoring, and lifecycle management. This managed service handles the complexity of model maintenance, ensuring your AI systems remain optimized and up-to-date."
   features={[
