--- a/src/content/learn/automatic-fallback-for-ai-models.mdx
+++ b/src/content/learn/automatic-fallback-for-ai-models.mdx
@@ -6,11 +6,11 @@ readingTime: "8 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimization", "Resiliency"]
 ---
 
-import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+import ServiceCard from '../../components/ServiceCard.astro';
 
 AI models and APIs can fail unexpectedly. Automatic fallback ensures your application continues to work by switching to a backup model or provider.
 
-<TetrateServiceCard 
+<ServiceCard 
   title="Managed Fallback Solution"
   description="provides automatic fallback capabilities with intelligent provider switching, health monitoring, and seamless failover. This managed service handles the complexity of fallback logic, ensuring your AI applications remain resilient even when individual providers experience issues."
   features={[
